<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World National Flag Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="s_america">S. AMERICA</string>
    <string name="oceania">OCEANIA</string>
    <string name="asia">ASIA</string>
    <string name="africa">AFRICA</string>
    <string name="europe">EUROPE</string>
    <string name="n_america">N. AMERICA</string>
    <string name="about">ABOUT</string>
    <string name="this_application_is_designed_to_ease_familiarity_with_national_flags_world_national_flag_challenge_provides_the_educative_and_entertaining_mind_sweeping_outlook_">This application is designed to ease familiarity with national flags. World National Flag Challenge provides the educative and entertaining mind sweeping-outlook.</string>
    <string name="by_enegi_lukman">By Enegi Lukman</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="enjoy_">Enjoy...</string>
    <string name="this_challenge_requires_you_to_select_the_correct_country_name_of_the_national_flag_on_current_display_from_the_options_provided_beginning_with_africa_play_across_all_continents_to_stand_a_chance_to_earn_higher_points_">This challenge requires you to select the correct country name of the national flag on current display, from the options provided. Beginning with africa, play across all continents to stand a chance to earn higher points.</string>
    <string name="ok">OK</string>
    <string name="algeria">Algeria</string>
    <string name="angola">Angola</string>
    <string name="nigeria">Nigeria</string>
    <string name="tanzania">Tanzania</string>
    <string name="_0">0</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="bahrain">Bahrain</string>
    <string name="bhutan">Bhutan</string>
    <string name="bosnia_amp_herzegovina">Bosnia &amp;amp; Herzegovina</string>
    <string name="albania">Albania</string>
    <string name="austria">Austria</string>
    <string name="belarus">Belarus</string>
    <string name="bahamas">Bahamas</string>
    <string name="barbados">Barbados</string>
    <string name="belize">Belize</string>
    <string name="australia">Australia</string>
    <string name="new_zealand">New Zealand</string>
    <string name="tuvalu">Tuvalu</string>
    <string name="fiji">Fiji</string>
    <string name="_drawable_australia">\@drawable/australia</string>
    <string name="argentina">Argentina</string>
    <string name="bolivia">Bolivia</string>
    <string name="brazil">Brazil</string>
    <string name="chile">Chile</string>
    <string name="antigua_barbuda">Antigua &amp; Barbuda</string>
    <string name="highest_score">Highest Score</string>
    <string name="this_application_is_designed_to_ease_familiarity_with_world_national_flags_world_national_flag_challenge_provides_the_educative_and_entertaining_outlook_">This application is designed to ease familiarity with world national flags. World National Flag Challenge provides the educative and entertaining outlook.</string>
    <string name="_enjoy">...enjoy</string>

</resources>
