<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/home"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button6"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="29dp"
        android:background="@drawable/btn3"
        android:text="@string/s_america"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignLeft="@+id/button3"
        android:background="@drawable/btn3"
        android:text="@string/oceania"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_marginLeft="30dp"
        android:background="@drawable/btn3"
        android:text="@string/asia"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginRight="14dp"
        android:layout_marginTop="46dp"
        android:layout_toLeftOf="@+id/button4"
        android:background="@drawable/btn3"
        android:text="@string/africa"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn3"
        android:text="@string/europe"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button2"
        android:background="@drawable/btn3"
        android:text="@string/n_america"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/help" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp"
        android:src="@drawable/audio" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/real1" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/imageView3"
        android:src="@drawable/info" android:contentDescription="@string/todo"/>

</RelativeLayout>
