<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:src="@drawable/real1" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:src="@drawable/afghanistan" android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/imageView1"
        android:text="@string/_0"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#00FF00"
        android:textSize="25sp"
        android:shadowColor="#FF00FF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignRight="@+id/textView4"
        android:text="@string/_0"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView4"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:text="@string/highest_score"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/textView2"
        android:layout_alignRight="@+id/imageView2"
        android:visibility="invisible"
        android:contentDescription="@string/todo"
        android:src="@drawable/correct" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/imageView3" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/afghanistan"
            android:textSize="15sp"
            android:textColor="#FFF" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/azerbaijan"
            android:textSize="15sp"
            android:textColor="#FFF" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bahrain"
            android:textSize="15sp"
            android:textColor="#FFF" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bhutan"
            android:textSize="15sp"
            android:textColor="#FFF" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignTop="@+id/textView2"
        android:contentDescription="@string/todo"
        android:src="@drawable/wrong" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/imageView1"
        android:background="@drawable/btn1"
        android:text="@string/ok"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/asia" android:contentDescription="@string/todo"/>

</RelativeLayout>