<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/real1" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_below="@+id/imageView1"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/antigua_and_barbuda" android:contentDescription="@string/todo"/>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:text="@string/antigua_barbuda" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:text="@string/bahamas" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:text="@string/barbados" />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="15sp"
            android:text="@string/belize" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/radioGroup1"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#FFF"
        android:background="@drawable/btn1"
        android:layout_marginTop="36dp"
        android:text="@string/ok" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/imageView2"
        android:layout_marginBottom="63dp"
        android:src="@drawable/correct" android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/imageView3"
        android:visibility="invisible"
        android:layout_alignTop="@+id/button1"
        android:src="@drawable/wrong" android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/imageView3"
        android:text="@string/_0"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/_0"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:text="@string/highest_score"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFF"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/_0"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#00FF00"
        android:visibility="invisible"
        android:textSize="25sp"
        android:shadowColor="#FF00FF"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/radioGroup1"
        android:src="@drawable/n" android:contentDescription="@string/todo"/>

</RelativeLayout>